# rust-backend

./: .gitignore  Cargo.toml  README.md
migrations/2019-12-15-063326_create_topics/: down.sql  up.sql
migrations/2019-12-27-101413_create_users/: down.sql  up.sql
migrations/2019-12-29-052158_create_issues/: down.sql  up.sql
migrations/2020-01-01-120131_create_comments/: down.sql  up.sql
src/: config.rs  error.rs  hooks.rs  main.rs  schema.rs
src/database/: comment.rs  issues.rs  issues_database.rs  mod.rs  user_database.rs  users.rs
src/models/: comment.rs  issues.rs  issues_model.rs  mod.rs  user_model.rs  users.rs
src/routes/: issues.rs  issues_route.rs  mod.rs  user_route.rs  users.rs
