[package]
name = "rust_project"
version = "0.1.0"
authors = ["alfinsuryaS <alfins132@gmail.com>"]
edition = "2018"
keywords = ["rust_project"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#logger
log = "0.4.0"
env_logger = "0.7.1"

chrono = { version = "0.4.6", features = ["serde"] }

# For connecting with the MySQL database
diesel = { version = "1.0.0", features = ["mysql", "r2d2"] }

#rocket-webserver
rocket = "0.4.2"
rocket_contrib = { version = "0.4.0", features = ["json", "diesel_mysql_pool", "uuid"] }

#rocket-testing
rocket_codegen = "0.4"

#cors
rocket_cors = { version = "0.5.1", default-features = false }

#env
dotenv = "0.9.0"

# Serialization/Deserialization
serde = {version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"

uuid = { version = "0.8", features = ["serde", "v4"] }